# adaL

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  NOTICE  README.md  docker-compose.yml  main.py  paper.md  pyproject.toml  requirements.txt
.claude/: launch.json
.github/workflows/: ci.yml
ada/: __init__.py  server.py
ada/cognitive/: __init__.py  generate.py  ops.py  surface.py  universal.py
ada/encoder/: __init__.py  llm_enricher.py
ada/memory/: __init__.py  ada_cognitive.py  ada_conversation.py  consolidate.py  design.md  profile_sim.py  sql_store.py  thought_persistence.py  thought_space.py
ada/skill/: __init__.py  schema_evolution.py
ada/tui/: __init__.py  app.py  cli.py  repl.py
ada/workbench/: __init__.py  index.html
api/: __init__.py
api/routes/: __init__.py  auth.py  health.py  tokens.py
benchmark/: PROTOCOL.md  llm_only_baseline.py
benchmark/consolidation/: PROTOCOL.md  REPORT.md  run_consolidation.py
benchmark/consolidation/results/: results-seeds1-5.json  results.json
benchmark/curriculum/: README.md
benchmark/curriculum/agi/: CROSS_DOMAIN_REPORT.md  CROSS_DOMAIN_REPORT_v2.md  README.md  ada.summary.json  ada.versions.jsonl
benchmark/curriculum/at-scale/: README.md
benchmark/phase1/: REPORT.md  generate_nl.py  run_phase1.py
benchmark/phase1/results-v2/: results_seed5.jsonl  results_seed6.jsonl  results_seed7.jsonl  results_seed8.jsonl  results_seed9.jsonl  summary_seed5.json  summary_seed6.json  summary_seed7.json  summary_seed8.json  summary_seed9.json
benchmark/phase1/results-v3/: results_seed10.jsonl  results_seed11.jsonl  results_seed12.jsonl  (+7 more)
benchmark/phase2/: REPORT.md  corpus.py  queries.py  run_phase2.py  systems.py
benchmark/phase3/: REPORT.md  run_phase3.py  sql_bench.py
benchmark/recall/: PROTOCOL.md  REPORT.md  corpus.json  generate_corpus.py  run_recall.py
docs/: MEMORY_RECALL_SPEC.md  OPEN-SOURCE-CHECKLIST.md  WORKBENCH.md  aurora_schema.md  schema_history.md  think_ask_schema.md
domains/: __init__.py
domains/auth/: __init__.py  passwords.py  service.py  users.py
domains/brain/: __init__.py  llm.py  think.py  thought_process.py
domains/mcp/: __init__.py  app.py  server.py
domains/models/: __init__.py  db_models.py
examples/professional-services/: README.md  demo.py  facts.py
infrastructure/: __init__.py  config.py
infrastructure/database/: __init__.py  connection.py
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_spaces_and_fact_slots.py  0003_workbench_users.py
scripts/: ada_repl.py  hard_test.py
shared/: __init__.py  auth.py  exceptions.py  middleware.py  retry.py
tests/: test_amend.py  test_auth_users.py  test_consolidate.py  test_forget.py  test_ops_and_surface.py  test_profile_sim.py  test_sql_store.py  test_thought_space.py  test_tui_app.py
(+107 files in other folders)
